Fix [alignement icones] - Ajout d'une classe pour aligner les icones des documents - Modification de l'alignement des icones dans les listes

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -479,7 +479,13 @@
 .ds44-docListIco {
   position: absolute;
   left: 0;
-  top: -1px;
+  top: 1px;
+}
+
+.ds44-docListElem {
+  .ds44-docListIco { // réalignement du picto dossier
+    top: -2px;
+  }
 }
 
 /* === Accessibilité === */
